new header added

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 .head{
     color: aqua;
     background-color:black;
+    text-align: center;
 }
 p{
     color: brown;
+}
+h3{
+    color: aquamarine;
 }
